--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Dilraj Singh",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
