--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Dilraj Singh",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.4",
@@ -23,6 +24,7 @@
     "nodemon": "^1.18.6",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
-    "react-stripe-checkout": "^2.6.3"
+    "react-stripe-checkout": "^2.6.3",
+    "stripe": "^6.15.0"
   }
 }
